Fix spacing issue with description on dashboard

--- a/src/assets/style/pages/dashboard.css
+++ b/src/assets/style/pages/dashboard.css
@@ -23,11 +23,13 @@ section#project-list div.project h2 {
 section#project-list div.project h3 {
 	font-size: 20px;
 	color: #545454;
+	height: 60px;
+	overflow: hidden;
 }
 section#project-list div.project p {
 	font-size: 15px;
 	color: grey;
-	margin: 30px 0 20px 0;
+	margin: 0 0 20px 0;
 }
 section#project-list div.project a {
 	background: orange;
